created error messages

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <span>Rib Width:</span>
                     <input id="rib-wdth" type="number" min="0">
                 </div>
-                <button id="submit" type="submit">Create Visual</button>
+                <button id="submit" type="submit" onclick="createVisual()">Create Visual</button>
             </form>
             <div id="visual">
 
